# fips203

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/workflows/: test.yml
benches/: README.md  benchmark.rs
ct_cm4/: Cargo.toml  Embed.toml  README.md
ct_cm4/.cargo/: config.toml
ct_cm4/src/: main.rs
dudect/: Cargo.toml  README.md
dudect/src/: main.rs
ffi/: Cargo.toml  README.md  build.rs  fips203.h  fips203.py
ffi/src/: .rustfmt.toml  lib.rs
ffi/tests/: Makefile  baseline.c
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_all.rs
src/: byte_fns.rs  helpers.rs  k_pke.rs  lib.rs  ml_kem.rs  ntt.rs  sampling.rs  traits.rs  types.rs
tests/: fails.rs  integration.rs  native.rs  vectors.rs
tests/cctv_vectors/: mod.rs
tests/cctv_vectors/ML-KEM/: README.md
tests/cctv_vectors/ML-KEM/modulus/: go.mod
tests/cctv_vectors/ML-KEM/unluckysample/: go.mod
tests/nist_vectors/: mod.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
wasm/www/: index.html  index.js  package.json  webpack.config.js
