workspace = { members = ['ffi'], exclude = ["ct_cm4", "dudect", "fuzz", "wasm"] }

[package]
name = "fips203"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 203 (draft): Module-Lattice-Based Key-Encapsulation Mechanism"
authors = ["Eric Schorn <eric.schorn@nccgroup.com>"]
documentation = "https://docs.rs/fips203"
categories = ["cryptography", "no-std"]
repository = "https://github.com/nccgroup/fips203"
keywords = ["kem", "FIPS203", "lattice", "kyber", "encapsulation"]
# MSRV set at 1.70 for debian testing, e.g. https://packages.debian.org/search?keywords=rustc
# This requires several marginally outdated dependencies, see below
rust-version = "1.70"


[features]
default = ["default-rng", "ml-kem-512", "ml-kem-768", "ml-kem-1024"]
default-rng = ["rand_core/getrandom"]
ml-kem-512 = []
ml-kem-768 = []
ml-kem-1024 = []


[dependencies]  # Some are marginally outdated to retain MSRV 1.70
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.2", default-features = false }
subtle = { version = "2.5.0", default-features = false, features = ['const-generics'] }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }


[dev-dependencies]  # Some are marginally outdated to retain MSRV 1.70
rand = "0.8.5"
regex = "1.10.2"
hex = "0.4.3"
rand_chacha = "0.3.1"
criterion = "0.4.0"
flate2 = "1.0.27"
hex-literal = "0.4.1"


[[bench]]
name = "benchmark"
harness = false


[profile.dev]
debug = true
#lto = true
#opt-level = 3
#codegen-units = 1


[profile.release]
lto = true
opt-level = "s"
codegen-units = 1


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
