[package]
name = "fips203-ct_cm4"
version = "0.2.1"
license = "MIT OR Apache-2.0"
description = "Cortex-M4 testbench for FIPS 203 (draft) ML-KEM"
authors = ["Eric Schorn <eric.schorn@nccgroup.com>"]
publish = false
edition = "2021"
rust-version = "1.70"


[dependencies]
fips203 = { path = "..", default-features = false, features = ["ml-kem-512"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
microbit-v2 = "0.13.0"
rtt-target = { version = "0.5.0" }
rand_core = { version = "0.6.4", default-features = false }
subtle = { version = "2.5.0", default-features = false }


[profile.dev]
debug = true
debug-assertions = false
overflow-checks = false
lto = true
opt-level = 3
codegen-units = 1


# If cargo complains about 'fixed' on MSRV 1.70, use version 1.23.1
# cargo update -p fixed@1.27.0 --precise 1.23.1