[package]
name = "fips203-dudect"
version = "0.2.1"
authors = ["Eric Schorn <eric.schorn@nccgroup.com>"]
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70"


[dependencies]
fips203 = { path = "..", default-features = false, features = ["ml-kem-512"] }
dudect-bencher = "0.6"
rand_core = { version = "0.6.4", default-features = false }
subtle = { version = "2.5.0", default-features = false, features = ['const-generics'] }


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1


[profile.release]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
